--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>About Animal IQ</h2>
-                    <p>Animal IQ was founded in 2020 by a group of passionate high school students who recognized the need for better animal education in their community. What started as a small school club has grown into a nationwide movement with chapters in over 50 schools.</p>
+                    <p>Animal IQ was founded in 2024 by a group of passionate university students who recognized the need for better animal education in their community.</p>
                     <p>Our mission is simple: to increase awareness about animal species, their habitats, conservation challenges, and how young people can make a positive impact.</p>
                     <p>We believe that knowledge is the first step toward change, and we're committed to making animal education accessible, engaging, and actionable for youth everywhere.</p>
                     <a href="#mission" class="btn">Learn More</a>
