--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="https://images.unsplash.com/photo-1557050543-4d5f4e07ef46?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Monarch Butterfly">
+                        <img src="https://unsplash.com/photos/a-close-up-of-a-butterfly-on-a-leaf-gRY5d2KSlR0" alt="Monarch Butterfly">
                     </div>
                     <div class="animal-info">
                         <h3>Monarch Butterfly</h3>
