--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="animal-grid">
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="https://images.unsplash.com/photo-1546182990-dffeafbe841d?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Amur Leopard">
+                        <img src="https://unsplash.com/photos/leopard-cub-walking-in-morning-light-tcBonGjSuA8" alt="Amur Leopard">
                     </div>
                     <div class="animal-info">
                         <h3>Amur Leopard</h3>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="https://images.unsplash.com/photo-1564349683136-77e08dba1ef7?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Sea Turtle">
+                        <img src="https://unsplash.com/photos/brown-turtle-swimming-underwater-L-2p8fapOA8" alt="Sea Turtle">
                     </div>
                     <div class="animal-info">
                         <h3>Hawksbill Sea Turtle</h3>
