--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="animal-grid">
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="https://unsplash.com/photos/leopard-cub-walking-in-morning-light-tcBonGjSuA8" alt="Amur Leopard">
+                        <img src="leopard.jpeg" alt="Amur Leopard">
                     </div>
                     <div class="animal-info">
                         <h3>Amur Leopard</h3>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="https://unsplash.com/photos/brown-turtle-swimming-underwater-L-2p8fapOA8" alt="Sea Turtle">
+                        <img src="turtle.jpeg" alt="Sea Turtle">
                     </div>
                     <div class="animal-info">
                         <h3>Hawksbill Sea Turtle</h3>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="https://images.unsplash.com/photo-1589656966895-2f33e7653819?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="African Elephant">
+                        <img src="elephant.jpeg" alt="African Elephant">
                     </div>
                     <div class="animal-info">
                         <h3>African Elephant</h3>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="https://unsplash.com/photos/a-close-up-of-a-butterfly-on-a-leaf-gRY5d2KSlR0" alt="Monarch Butterfly">
+                        <img src="butterfly.jpeg" alt="Monarch Butterfly">
                     </div>
                     <div class="animal-info">
                         <h3>Monarch Butterfly</h3>
