--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="animal-grid">
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="https://images.unsplash.com/photo-1546182990-dffeafbe841d?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Amur Leopard">
+                        <img src="https://unsplash.com/photos/leopard-cub-walking-in-morning-light-tcBonGjSuA8" alt="Amur Leopard">
                     </div>
                     <div class="animal-info">
                         <h3>Amur Leopard</h3>
