--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="turyle.jpeg" alt="Sea Turtle">
+                        <img src="photos/turtle.jpeg" alt="Sea Turtle">
                     </div>
                     <div class="animal-info">
                         <h3>Hawksbill Sea Turtle</h3>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="elephant.jpeg" alt="African Elephant">
+                        <img src="photos/elephant .jpeg" alt="African Elephant">
                     </div>
                     <div class="animal-info">
                         <h3>African Elephant</h3>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="butterfly.jpeg" alt="Monarch Butterfly">
+                        <img src="photos/butterfly.jpeg" alt="Monarch Butterfly">
                     </div>
                     <div class="animal-info">
                         <h3>Monarch Butterfly</h3>
