--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="animal-grid">
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="photos/leopard.jpeg" alt="Amur Leopard">
+                        <img src="leopard.jpeg" alt="Amur Leopard">
                     </div>
                     <div class="animal-info">
                         <h3>Amur Leopard</h3>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="photos/Turtle.jpeg" alt="Sea Turtle">
+                        <img src="photos/turtle.jpeg" alt="Sea Turtle">
                     </div>
                     <div class="animal-info">
                         <h3>Hawksbill Sea Turtle</h3>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="photos/elephant.jpeg" alt="African Elephant">
+                        <img src="photos/elephant .jpeg" alt="African Elephant">
                     </div>
                     <div class="animal-info">
                         <h3>African Elephant</h3>
