--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="animal-card">
                     <div class="animal-image">
-                        <img src="photos/turtle.jpeg" alt="Sea Turtle">
+                        <img src="photos/Turtle.jpeg" alt="Sea Turtle">
                     </div>
                     <div class="animal-info">
                         <h3>Hawksbill Sea Turtle</h3>
